# atlas-design-pattern-oktober-2024

./: README.md
ObserverMitObservable/: main.cpp
ObserverMitObservable/propertychanged/: PropertyChangedEvent.h  PropertyChangedProvider.h
ObserverMitObservable/tiere/: Schwein.h
SingletonWithSmartpointer/: Singleton.h
Tag1_01Dekorator/: CMakeLists.txt  main.cpp
Tag1_01Dekorator/client/: CalcClient.h
Tag1_01Dekorator/math/: Calculator.h  CalculatorBenchmark.h  (+4 more)
Tag1_02Singleton/: CMakeLists.txt  Singleton.h
Tag1_04Visitor/: CMakeLists.txt  main.cpp
Tag1_05State/: CMakeLists.txt  FrontController.cpp  FrontController.h  main.cpp
Tag1_06TrafficLight/: CMakeLists.txt  main.cpp
Tag1_06TrafficLight/trafficlight/: TrafficLight.cpp  TrafficLight.h
Tag1_06TrafficLight/trafficlight/state/: AbstractTrafficLightColorState.h  AbstractTrafficLightState.h  GreenState.h  OffState.h  RedState.h  TrafficLightState.h
Tag1_06TrafficLight/trafficlight/states/: TrafficLightState.h
Tag2_02ObserverMitObservable/: CMakeLists.txt
Tag2_03Command/: CMakeLists.txt  main.cpp
Tag2_03Command/command/: AbstractCommand.h  ClearCommand.h  Command.h  CommandFactory.h  CommandHistory.h  SubCommand.h
Tag2_03Command/math/: Calculator.h
Tag2_04Memento/: CMakeLists.txt  main.cpp
Tag2_05Template/: CMakeLists.txt  main.cpp
Tag3_01Iterator/: CMakeLists.txt  main.cpp
Tag3_02Composite/: CMakeLists.txt  main.cpp
Tag3_03Bank/: CMakeLists.txt  main.cpp
Tga2_01ObserverAdapter/: CMakeLists.txt  main.cpp
tag1_03FlyWeight/: AttributedCharacter.h  CMakeLists.txt  main.cpp
(+32 files in other folders)
